--- a/Win32Dx11.vcxproj
+++ b/Win32Dx11.vcxproj
@@ -16,6 +16,7 @@
     <ProjectGuid>{e5530b1c-be71-42be-a072-cc4d02a4f7d3}</ProjectGuid>
     <RootNamespace>Win32Dx11</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <LocalDebuggerWorkingDirectory>$(OutDir)</LocalDebuggerWorkingDirectory>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -102,6 +103,9 @@
     <FxCompile Include="shader-vertex.hlsl">
       <ShaderType>Vertex</ShaderType>
     </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
