Added logging and made menu optional

--- a/Win32Dx11.vcxproj
+++ b/Win32Dx11.vcxproj
@@ -79,6 +79,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="D3D11Render.h" />
+    <ClInclude Include="DiagOutput.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
